[package]
name = "game_server"
version = "0.1.0"
authors = ["gala377 <r.galczak@gmail.com>"]

[lib]
name = "glib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# toml support for serde
toml = "0.4"

# for some testing 
tempfile = "3"

# for message deserialization
byteorder = "1"

# check how to use or delete
log = { version = "0.4", features = ["release_max_level_info"]}
